   ArrayExtend() template functions.

 * Fix parsing of whitespace in template array dereference (#175).

 * Display offsets in comments panel (#165).

 * Don't show expand arrows next to comments without children in comments
   panel on Windows/macOS.

 * Improve performance of templates that declare many (thousands+) of
   variables in the file.

 * Add Error() function for templates (#186).

Version 0.5.3 (2022-06-25)

 * Fix some undefined behaviour issues.

Version 0.5.2 (2022-06-24)

 * Correctly nest comments when updating comments panel (#169).

 * Update text in comments panel when a comment is modified.

 * Fix display of >4GiB virtual offsets in files that are <=4GiB (#170).

 * Add support for code page 437 (IBM) and 932/936/949/950 (Microsoft).

 * Fix handling of multibyte character boundaries in document view.

 * Draw wide characters in document view (#173).

 * Move forwards/backwards and select whole instructions from disassembly
   in document view.

 * Don't capture tab key press in text area of document view.

 * Add missing error checks.

 * Add number base option to "Jump to offset" dialog.

 * Drawing optimisations (improves responsiveness), particularly on macOS.

Version 0.5.1 (2022-04-29)

 * Fix macOS build to run on 10.13 (High Sierra) or later.

 * Fix 'install' target on BSD platforms.

Version 0.5.0 (2022-04-23)

 * Added "x86 disassembly syntax" to "View" menu to allow selecting between
   Intel or AT&T notation for x86 disassembly (#142).

 * Handle file open message used for "Open With" on macOS (#144).

 * Added --compare switch to jump straight into comparing two files (#141).

 * Fix timer leak that can cause a crash when closing the compare window or
   strings panel.

 * Add import and export functions for Intel Hex files (#102).

 * Add online help (#147).

 * Add Bitmap Data Visualisation tool (#29).

 * Add Binary Template support (#138).

 * [Emily Ellis] Save new files without the execute bit set (#154).
