@@ -15,6 +15,9 @@ Version TBA
 
  * Add Error() function for templates (#186).
 
+ * Fix crash when attempting to use string as a file variable in
+   templates (#185).
+
 Version 0.5.3 (2022-06-25)
 
  * Fix some undefined behaviour issues.
